# grok-free-register_xiaocongyu66

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  auth-service.sh  pytest.ini  register.py  requirements.txt  setup.sh  start.sh
core/: observer.py
deploy/: ai_share_metadata.py
docker/: README.hf-space.md  entrypoint.sh
docs/: architecture.md  developer-handoff.md
grok_register/: __main__.py  account_convert.py  account_inventory.py  auth_service_protocol.py  cliproxyapi.py  config_catalog.py  dashboard.py  env_store.py  go_register.py  job_store.py  memory_hygiene.py  polyglot.py  protocol_register.py  proxy_auto.py  proxy_batch_test.py  proxy_relay.py  proxy_scraper.py  register.py  run_log.py  runtime_status.py  sso_export.py  sso_protocol.py  turnstile_solver.py  xai_proto_util.py  xai_protocol_oauth.py
native/: README.md
native/inventory-worker/: Cargo.toml  README.md  go.mod  main.go
native/inventory-worker/src/: main.rs
scripts/: build-native.sh  ensure_runtime.sh  export_registered_sessions.py  polyglot_gate.sh  socks_http_relay.py  split_cpa_bundle.py  sso-relogin.sh  sync_cpa_to_cliproxy.sh
tests/: conftest.py  test_account_convert.py  test_account_inventory.py  test_admission_gate.py  test_ai_share_metadata.py  test_cancel.py  test_cliproxyapi.py  test_core.py  test_inventory_unittest.py  test_n8n_newapi_workflows.py  test_newapi_release.py  test_polyglot.py  test_property.py  test_proxy_auto.py  test_proxy_batch_test.py  test_proxy_relay.py  test_proxy_scraper.py  test_proxy_worker_go.py  test_register_runtime_unittest.py  (+13 more)
(+59 files in other folders)
