[package]
name = "inventory-worker"
version = "0.1.0"
edition = "2021"
description = "Rust account inventory scanner / bundle builder for grok-free-register"
license = "MIT"
publish = false

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
walkdir = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }
